  * releasing versoin 0.1.0

* Thu Sep 23 14:52:41 2004, pabs <pabs@pablotron.org>
  * rubilicious.gemspec: minor fixes
  * added MANIFEST

* Thu Sep 23 14:53:20 2004, pabs <pabs@pablotron.org>
  * _really_ releasing 0.1.0

* Thu Sep 23 14:56:27 2004, pabs <pabs@pablotron.org>
  * rubilicious.gemspec: ARGH this time it better work
  * finally releasing 0.1.0

* Wed Sep 29 11:34:15 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: don't fetch URL twice
  * rubilicious.rb: inc version to 0.1.1
  * rubilicious.gemspec: inc version to 0.1.1
  * README: inc version to 0.1.1

* Wed Sep 29 11:37:36 2004, pabs <pabs@pablotron.org>
  * release version 0.1.1

* Fri Oct 01 15:26:27 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: handle multiple subs in Rubilicious#subs correctly
  * rubilicious.rb: convert time in Rubilicious#inbox return
  * rubilicious.rb: added Rubilicious#user_tags

* Fri Oct 01 16:41:28 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: fix time handling in user_tags
  * rubilicious.rb: rename user tags to user_posts

* Fri Oct 01 17:03:55 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: add documentation to user_posts
  * rubilicious.rb: add optional tag argument to user_posts
  * rubilicious.rb: 4-digit year in Time#to_iso8601

* Fri Oct 01 17:07:45 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: increment version to 0.1.2
  * README: increment version to 0.1.2
  * rubilicious.gemspec: increment version to 0.1.2

* Fri Oct 01 17:08:45 2004, pabs <pabs@pablotron.org>
  * release version 0.1.2

* Mon Oct 04 04:25:59 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: add HTTP proxy support (roughtly based on a patch
    from Guillaume Bisch <guillaume@bisch.org>
  * rubilicious.rb: added Rubilicious#use_proxy override (defaults to
    true), just in case people don't want to use the proxy

* Mon Nov 01 02:50:06 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: doc fix from josh lucas <josh@stonecottage.com>