@@ -1,7 +1,7 @@
-Rubilicious 0.1.2 README
+Rubilicious 0.1.3 README
 ========================
 
-This document was last updated on Thu Sep 23 07:17:25 2004.  Please see
+This document was last updated on Mon Oct 04 12:58:00 2004.  Please see
 the file COPYING for licensing and warranty information.  Visit
 http://pablotron.org/software/rubilicious/ for the latest version of
 this software.
